--- a/sources/style/style.css
+++ b/sources/style/style.css
@@ -4,7 +4,7 @@
 }
 #h2-logo{
     color: rgb(243, 239, 7);
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-style: italic;
@@ -15,7 +15,7 @@
 
 #h2-link{
     color: rgb(243, 239, 7);
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-style: italic;
@@ -24,28 +24,20 @@
 }
 
 .footer-ul{
+    margin-top:0.5cm;
+    text-align: center;
     
-    position: absolute;
     color:yellow;
 }
-.phone-footer{
-    position: relative;
-    display: block;
-}
-.email-footer{
-    position: relative;
-    display: block;
-}
-.website-footer{
-    position: relative;
-    display: block;
+.ul-footer{
+    margin-left:8.5cm;
 }
 .nav-link{
     color:white;
     border-spacing: 20px;
 }
 .nav{
-    padding-top:3cm;
+    
     margin-left: 4cm;
     font-size: 20px;
    
@@ -56,6 +48,22 @@
 }
 .nav-link:active{
     background-color: yellow;
+}
+.lienhe{
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+   
+    color:black;
+    text-align: left;
+}
+.lienhe:hover{
+    text-decoration: none;
+    color:black;
+}
+.imglienhe{
+    margin-left:25cm;
 }
 .dangnhap{
     
