--- a/sources/style/style.css
+++ b/sources/style/style.css
@@ -71,7 +71,9 @@
     font-size:20px;
     margin-left:50px;
     font-family: Arial, Helvetica, sans-serif;
-
+    border:1px solid red;
+    border-radius: 20%;
+    
 }
 .dangky
 {
