--- a/sources/style/style.css
+++ b/sources/style/style.css
@@ -169,6 +169,17 @@ label{
     margin-left: 2cm;
     margin-right: 2cm;
 }
+.goivayshk{
+    border:0.5px solid gray;
+    margin-right: 2cm;
+    margin-left:2cm;
+}
+.chovaytheongay{
+    border:0.5px solid gray;
+    margin-right: 2cm;
+    margin-left:2cm;
+
+}
 .sotiencanvay{
     color:white;
     font-size:25px;
