--- a/sources/style/style.css
+++ b/sources/style/style.css
@@ -180,6 +180,15 @@ label{
     margin-left:2cm;
 
 }
+
+.goivay{
+    background-image: url("./image/tien3.jpg");
+    background-color: #cccccc;
+    height:580px;;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .sotiencanvay{
     color:white;
     font-size:25px;
@@ -189,7 +198,10 @@ label{
     background-color:rgb(143, 8, 8);
     margin-left: 2cm;
     margin-right: 2cm;
+    
 }
+
+
 
 /* input[type=text],[type=password] {
     width: 20cm;
